# max_cover_disc

./: CMakeLists.txt  README.md  cover.cpp  cover.hpp  globals.hpp  main.cpp
